# Mp3Recorder

./: .gitignore  README.md  build.gradle  circle.yml  gradle.properties  settings.gradle
.github/workflows/: main.yml
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/io/j99/mp3recorder/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/io/j99/mp3recorder/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
example/: build.gradle
example/src/main/: AndroidManifest.xml
example/src/main/res/layout/: activity_main2.xml
example/src/main/res/values/: themes.xml
example/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
lame/: build.gradle
lame/src/main/: AndroidManifest.xml
lame/src/main/cpp/: CMakeLists.txt  com_github_henjue_lame_LameEncoder.c  com_github_henjue_lame_LameEncoder.h
lame/src/main/cpp/lame-3.100_libmp3lame/: VbrTag.c  bitstream.c  encoder.c  fft.c  gain_analysis.c  id3tag.c  lame.c  lame.h  lame.rc  machine.h  newmdct.c  presets.c  psymodel.c  quantize.c  quantize_pvt.c  reservoir.c  set_get.c  set_get.h  takehiro.c  util.c  util.h  vbrquantize.c
mp3recorder/: bintray.gradle  build.gradle  proguard-rules.pro
mp3recorder/src/main/: AndroidManifest.xml
mp3recorder/src/main/cpp/: CMakeLists.txt  io_j99_library_mp3recorder_LameEncoder.c  io_j99_library_mp3recorder_LameEncoder.h
mp3recorder/src/main/cpp/lame-3.98.4_libmp3lame/: encoder.c
mp3recorder/src/main/jni/lame-3.98.4_libmp3lame/: newmdct.c
(+9 files in other folders)
